# Hackathon-ERROR404

backend/: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: bd15b29cf945_initial_tables.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py
backend/app/ml/: __init__.py  face_recognition.py  fingerprint.py  id_validation.py
backend/app/models/: __init__.py  anomaly.py  attendance.py  course.py  session.py  student.py  user.py
backend/app/routers/: __init__.py  analytics.py  anomalies.py  attendance.py  auth.py  courses.py  sessions.py  students.py
backend/app/schemas/: __init__.py  analytics.py  anomaly.py  attendance.py  auth.py  course.py  session.py  student.py
backend/app/services/: __init__.py  analytics.py  anomaly.py  attendance.py  verification.py
backend/app/utils/: __init__.py  hashing.py
frontend/: package-lock.json  package.json
frontend-nextjs/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.js
frontend-nextjs/certificates/: localhost-key.pem  localhost.pem
frontend-nextjs/convex/: analytics.ts  anomalies.ts  attendance.ts  auth.ts  courses.ts  faculty.ts  networks.ts  schema.ts  seed.ts  sessions.ts  students.ts  timetable.ts
frontend-nextjs/convex/_generated/: api.d.ts
frontend-nextjs/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend-nextjs/src/lib/: api.ts.bak  auth.tsx.bak  utils.ts
frontend/src/: App.jsx
frontend/src/pages/: Login.jsx  (+2 more)
(+33 files in other folders)
